--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,12 +5,13 @@ description = "クソでっけぇプッシャーゲーム効率化"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "pydantic>=2.11.7",
     "pyotp>=2.9.0",
     "python-dotenv>=1.1.1",
-    "requests>=2.32.4",
+    "requests>=2.32.5",
 ]
 
 [dependency-groups]
 dev = [
-    "pyinstaller>=6.14.1",
+    "pyinstaller>=6.15.0",
 ]
