--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "クソでっけぇプッシャーゲーム効率化"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "psutil>=7.0.0",
     "pydantic>=2.11.7",
     "pyotp>=2.9.0",
     "python-dotenv>=1.1.1",
