--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "pydantic>=2.11.7",
     "pyotp>=2.9.0",
     "python-dotenv>=1.1.1",
+    "python-osc>=1.9.3",
     "pywin32>=311",
     "requests>=2.32.5",
 ]
