--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "python-dotenv>=1.1.1",
     "pywin32>=311",
     "requests>=2.32.5",
+    "tzdata>=2025.3",
 ]
 
 [dependency-groups]
